Improved memory footprint by declaring objects outside of the loop instead of creating new ones in each iteration of the loop.